// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OE - Description List horizontal renders correctly 1`] = `
<jest>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    />
    <div
      class="mb-3"
    />
    <div
      class="mb-3"
    />
  </dl>
</jest>
`;

exports[`OE - Description List with title bordered renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl
    class="bcl-description-list"
  >
    <div
      class="border-bottom pb-2-5 mb-2-5"
    />
    <div
      class="border-bottom pb-2-5 mb-2-5"
    />
    <div
      class="border-bottom pb-2-5 mb-2-5"
    />
  </dl>
</jest>
`;

exports[`OE - Description List with title horizontal and bordered renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="border-bottom pb-2-5 mb-2-5 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="border-bottom pb-2-5 mb-2-5 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="border-bottom pb-2-5 mb-2-5 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title horizontal with different col size renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <div
    class="bcl-description-list"
  >
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
    <dl
      class="mb-3 row"
    >
      <div
        class="col-md-3"
      />
      <div
        class="col"
      />
    </dl>
  </div>
</jest>
`;

exports[`OE - Description List with title renders correctly 1`] = `
<jest>
  <h6
    class="mb-4 bcl-heading"
  >
    Description list test title
  </h6>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    />
    <div
      class="mb-3"
    />
    <div
      class="mb-3"
    />
  </dl>
</jest>
`;

exports[`OE - Description List with title with inline icon renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    />
  </dl>
</jest>
`;

exports[`OE - Description List with title with new classes on definition icon renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    />
  </dl>
</jest>
`;

exports[`OE - Description List with title with new classes on term icon renders correctly 1`] = `
<jest>
  <dl
    class="bcl-description-list"
  >
    <div
      class="mb-3"
    />
  </dl>
</jest>
`;
